✨  PR 리스트  조회 변경(S11P31S106-121)