@@ -25,7 +25,6 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -57,19 +56,29 @@ public class PullRequestService {
 
     }
 
-    public List<PullRequestDto> getOpenPullRequestOpenedList(String owner, String repo) {
-        List<PullRequest> prList = pullRequestRepository.findOpenPullRequestsByOwnerAndRepo(owner, repo)
-                .orElse(Collections.emptyList());
+    public List<PullRequestDto> getPullRequestListByReviewer(String owner, String repo) {
 
-        return prList.stream()
+        //TODO : 요청한 유저의 아이디로 변경
+        String userId = "jmeve24";
+        List<PullRequest> prList = pullRequestRepository.findAllByOwnerAndRepoWhereReviewerIs(owner, repo, userId)
+                .orElse(List.of());
+
+        return prList
+                .stream()
                 .map(this::toPullRequestDto)
                 .toList();
+
     }
 
-    public List<PullRequestDto> getClosedPullRequestOpenedList(String owner, String repo) {
-        List<PullRequest> prList = pullRequestRepository.findClosedPullRequestsByOwnerAndRepo(owner, repo)
-                .orElse(Collections.emptyList());
-        return prList.stream()
+    public List<PullRequestDto> getPullRequestListByWriter(String owner, String repo) {
+
+        //TODO : 요청한 유저의 아이디로 변경
+        String userId = "jmeve24";
+        List<PullRequest> prList = pullRequestRepository.findAllByOwnerAndRepoWhereWriterIs(owner, repo, userId)
+                .orElse(List.of());
+
+        return prList
+                .stream()
                 .map(this::toPullRequestDto)
                 .toList();
     }
